hook and new structure

--- a/hooks/build
+++ b/hooks/build
@@ -3,9 +3,9 @@
 set -e
 
 TOOL=$( echo ${DOCKER_TAG} | awk -F- '{ print $1}' )
-DOCKER_TAG=$( echo ${DOCKER_TAG} | awk -F- '{ print $2}' )
+VERSION=$( echo ${DOCKER_TAG} | awk -F- '{ print $2}' )
 
-cd ${TOOL}/${DOCKER_TAG}
+cd ${TOOL}/${VERSION}
 
-docker build -t mpgagebioinformatics/${TOOL}:${DOCKER_TAG} .
-docker push mpgagebioinformatics/${TOOL}:${DOCKER_TAG}
+docker build -t mpgagebioinformatics/${TOOL}:${VERSION} .
+docker push mpgagebioinformatics/${TOOL}:${VERSION}
