hook and new structure

--- a/hooks/build
+++ b/hooks/build
@@ -6,7 +6,7 @@ tagStart=$(expr index "$IMAGE_NAME" :)
 repoName=${IMAGE_NAME:0:tagStart-1}
 tool=$(echo ${repoName} | awk -F/ '{print $2}' )
 
-cd ${tool}/${DOCKER_TAG}
+cd ${DOCKER_REPO}/${DOCKER_TAG}
 
-docker build -t ${repoName}:${DOCKER_TAG} .
-docker push ${repoName}:${DOCKER_TAG}
+docker build -t mpgagebioinformatics/${IMAGE_NAME} .
+docker push mpgagebioinformatics/${IMAGE_NAME}
