--- a/subread/2.0.3/Dockerfile
+++ b/subread/2.0.3/Dockerfile
@@ -13,8 +13,8 @@ RUN apt-get update && apt-get -yq dist-upgrade && \
   apt-get install -yq wget tar && \
   apt-get clean && rm -rf /var/lib/apt/lists/* 
 
-RUN wget https://github.com/pachterlab/kallisto/releases/download/v0.48.0/kallisto_linux-v0.48.0.tar.gz && \
-  tar -zxvf kallisto_linux-v0.48.0.tar.gz
+# RUN wget https://github.com/pachterlab/kallisto/releases/download/v0.48.0/kallisto_linux-v0.48.0.tar.gz && \
+#   tar -zxvf kallisto_linux-v0.48.0.tar.gz
 
 RUN wget https://downloads.sourceforge.net/project/subread/subread-2.0.3/subread-2.0.3-Linux-x86_64.tar.gz && \
   tar -zxvf subread-2.0.3-Linux-x86_64.tar.gz
