--- a/rnaseq.python/3.8-1/Dockerfile
+++ b/rnaseq.python/3.8-1/Dockerfile
@@ -10,17 +10,17 @@ echo "deb http://security.debian.org/debian-security bullseye-security main cont
 echo "deb-src http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list
 
 RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq wget build-essential zlib1g-dev libbz2-dev liblzma-dev git && \
+  apt-get install -yq wget build-essential zlib1g-dev libbz2-dev liblzma-dev git libmagickwand-dev && \
   apt-get clean && rm -rf /var/lib/apt/lists/* 
 
-RUN pip3 install pandas
-RUN pip3 install xlrd
-RUN pip3 install openpyxl
-RUN pip3 install biomart
-RUN pip3 install git+https://github.com/mpg-age-bioinformatics/AGEpy.git
-RUN pip3 install numpy
-RUN pip3 install -U scikit-learn scipy matplotlib
-RUN pip3 install seaborn
-RUN pip3 install git+https://github.com/cytoscape/py2cytoscape.git
-RUN pip3 install multiqc --ignore-installed
-RUN pip3 install RSeQC
+RUN pip3 install pandas && python3 -c "import pandas"
+RUN pip3 install xlrd && python3 -c "import xlrd"
+RUN pip3 install openpyxl && python3 -c "import openpyxl"
+RUN pip3 install biomart && python3 -c "import biomart"
+RUN pip3 install git+https://github.com/mpg-age-bioinformatics/AGEpy.git && python3 -c "import AGEpy"
+RUN pip3 install numpy && python3 -c "import numpy"
+RUN pip3 install -U scikit-learn scipy matplotlib && python3 -c "import sklearn, scipy, matplotlib"
+RUN pip3 install seaborn && python3 -c "import seaborn"
+RUN pip3 install git+https://github.com/cytoscape/py2cytoscape.git && python3 -c "import py2cytoscape"
+RUN pip3 install multiqc --ignore-installed && python3 -c "import multiqc"
+RUN pip3 install RSeQC && infer_experiment.py -h
