--- a/iqtree2/2.2.2.3/Dockerfile
+++ b/iqtree2/2.2.2.3/Dockerfile
@@ -13,13 +13,14 @@ RUN apt-get update && apt-get -yq dist-upgrade && \
   apt-get install -yq wget tar && \
   apt-get clean && rm -rf /var/lib/apt/lists/* 
 
-Run wget https://mmseqs.com/latest/mmseqs-linux-avx2.tar.gz; tar xvfz mmseqs-linux-avx2.tar.gz && \
-    export PATH=/mmseqs/bin/:$PATH
+Run wget https://mmseqs.com/latest/mmseqs-linux-avx2.tar.gz; tar xvfz mmseqs-linux-avx2.tar.gz 
 
 Run wget https://mafft.cbrc.jp/alignment/software/mafft-7.511-linux.tgz && \
-    tar xfvz mafft-7.511-linux.tgz  && \
-    export PATH=/mafft-linux64/:$PATH
+    tar xfvz mafft-7.511-linux.tgz 
 
 Run wget https://github.com/iqtree/iqtree2/releases/download/v2.2.2.3/iqtree-2.2.2.3-Linux.tar.gz && \
-    tar xvzf  iqtree-2.2.2.3-Linux.tar.gz  && \
-    export PATH=/iqtree-2.2.2.3-Linux/bin:$PATH
+    tar xvzf  iqtree-2.2.2.3-Linux.tar.gz  
+
+ENV PATH /mmseqs/bin:$PATH
+ENV PATH /mafft-linux64:$PATH
+ENV PATH /iqtree-2.2.2.3-Linux/bin:$PATH
