--- a/.github/workflows/docker.tag.yml
+++ b/.github/workflows/docker.tag.yml
@@ -14,7 +14,7 @@ jobs:
       run: | 
         echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
         TOOL="$(echo ${GITHUB_REF#refs/*/} | cut -d '-' -f 1 )"
-        VERS="$(echo ${GITHUB_REF#refs/*/} | | cut -d '-' -f 2- )"
+        VERS="$(echo ${GITHUB_REF#refs/*/} | cut -d '-' -f 2- )"
 
         git clone https://github.com/mpg-age-bioinformatics/software.git ${GITHUB_REF#refs/*/}
         cd ${GITHUB_REF#refs/*/}
