--- a/.github/workflows/docker.tag.yml
+++ b/.github/workflows/docker.tag.yml
@@ -21,6 +21,7 @@ jobs:
         git checkout ${GITHUB_REF#refs/*/}
         cd ${TOOL}/${VERS}
         docker build --no-cache -t docker.io/mpgagebioinformatics/${TOOL}:${VERS} .
+        docker push docker.io/mpgagebioinformatics/${TOOL}:${VERS}
     - name: Set Success env
       run: echo "GITHUB_SHA_SHORT=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Slack Success Notification
