--- a/fasttree/2.1.11/Dockerfile
+++ b/fasttree/2.1.11/Dockerfile
@@ -10,8 +10,9 @@ echo "deb http://security.debian.org/debian-security bullseye-security main cont
 echo "deb-src http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list
 
 RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq curl && \
+  apt-get install -yq curl libgomp1 && \
   apt-get clean && rm -rf /var/lib/apt/lists/*
+
 
 RUN curl -o /bin/FastTree http://www.microbesonline.org/fasttree/FastTree && \
     curl -o /bin/FastTreeMP http://www.microbesonline.org/fasttree/FastTreeMP  && \
