--- a/repeatmasker/4.1.5/Dockerfile
+++ b/repeatmasker/4.1.5/Dockerfile
@@ -1,3 +1,5 @@
+## FROM https://github.com/pegi3s/dockerfiles/blob/master/repeat_masker/4.0.9/Dockerfile
+
 FROM debian:bullseye-slim
 
 LABEL maintainer "bioinformatics@age.mpg.de"
