--- a/mageck/e94a4f7/Dockerfile
+++ b/mageck/e94a4f7/Dockerfile
@@ -10,7 +10,7 @@ echo "deb http://security.debian.org/debian-security bullseye-security main cont
 echo "deb-src http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list
 
 RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq git build-essential && \
+  apt-get install -yq git build-essential wget && \
   apt-get clean && rm -rf /var/lib/apt/lists/* 
 
 RUN pip install numpy==1.19.5 scipy
@@ -18,5 +18,10 @@ RUN pip install numpy==1.19.5 scipy
 RUN git clone https://bitbucket.org/liulab/mageck.git && \
     cd mageck && \
     python setup.py install
+
+RUN wget https://downloads.sourceforge.net/project/spacerscoringcrispr/SSC0.1/SSC0.1.tar.gz && \
+  tar -zxvf SSC0.1.tar.gz
+
+ENV PATH /SSC0.1/bin:${PATH}
 
 ENTRYPOINT echo "Welcome to MAGeCK Docker" & mageck --version & /bin/bash 
