racoon clip using conda

--- a/racoonclip/1.0.7/Dockerfile
+++ b/racoonclip/1.0.7/Dockerfile
@@ -1,22 +1,30 @@
-FROM debian:bullseye-slim
+FROM continuumio/miniconda3:23.10.0-1
 
-LABEL maintainer "bioinformatics@age.mpg.de"
+LABEL maintainer="bioinformatics@age.mpg.de"
+LABEL org.jupyter.service="jupyterhub"
 
-RUN echo "deb http://deb.debian.org/debian/ bullseye main contrib non-free" >> /etc/apt/sources.list && \
-echo "deb-src http://deb.debian.org/debian/ bullseye main contrib non-free" >> /etc/apt/sources.list && \
-echo "deb http://deb.debian.org/debian/ bullseye-updates main contrib non-free" >> /etc/apt/sources.list && \
-echo "deb-src http://deb.debian.org/debian/ bullseye-updates main contrib non-free" >> /etc/apt/sources.list && \
-echo "deb http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list && \
-echo "deb-src http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list
+RUN apt-get update \
+ && apt-get install -yq --no-install-recommends \
+	wget \
+	unzip \
+    git \
+    gcc \ 
+    g++ \
+    python3-pip && \
+    apt-get purge && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq wget unzip git python3-pip && \
-  apt-get clean && rm -rf /var/lib/apt/lists/* 
- 
 RUN wget https://github.com/ZarnackGroup/racoon_clip/archive/refs/tags/v1.0.7.zip
 RUN unzip v1.0.7.zip
 
 WORKDIR /racoon_clip-1.0.7/ 
+
+RUN conda install --quiet --yes -n base --override-channels -c conda-forge mamba 'python_abi=*=*cp*' && \
+    conda create -n racoon_clip python=3.9.2 pip  && \
+    echo "conda activate racoon_clip" >> ~/.bashrc
+SHELL ["/bin/bash", "--login", "-c"]
+ENV PATH /opt/conda/envs/racoon_clip/bin:$PATH
 
 RUN pip install -e .
 RUN racoon_clip -h
