racoon_clip 1.0.7 mamba

--- a/racoonclip/1.0.7/Dockerfile
+++ b/racoonclip/1.0.7/Dockerfile
@@ -1,4 +1,4 @@
-FROM continuumio/miniconda3:23.10.0-1
+FROM condaforge/miniforge3:23.3.1-1
 
 LABEL maintainer="bioinformatics@age.mpg.de"
 LABEL org.jupyter.service="jupyterhub"
@@ -21,10 +21,10 @@ RUN unzip v1.0.7.zip
 
 WORKDIR /racoon_clip-1.0.7/ 
 
-RUN conda install --quiet --yes -n base --override-channels -c conda-forge mamba 'python_abi=*=*cp*' && \
-    conda create -n racoon_clip python=3.9.2 pip  && \
-    echo "conda activate racoon_clip" >> ~/.bashrc
-SHELL ["/bin/bash", "--login", "-c"]
+RUN mamba create -n racoon_clip python=3.9.2 pip -y && \
+    mamba init  && \
+    echo "mamba activate racoon_clip" >> ~/.bashrc
+SHELL ["conda", "run", "--no-capture-output", "-n", "racoon_clip", "/bin/bash", "-c"]
 ENV PATH /opt/conda/envs/racoon_clip/bin:$PATH
 
 RUN pip install -e .
@@ -35,9 +35,8 @@ WORKDIR /racoon_clip-1.0.7/racoon_clip/workflow/envs
 RUN sed -i '$i\  - pandoc' racoon_R_v0.1.yml
 RUN sed -i '$i\  - r-cairo' racoon_R_v0.1.yml
 
-RUN apt-get update \
- && apt-get install -yq --no-install-recommends \
- libtiff5 && \
-    apt-get purge && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+WORKDIR /racoon_clip-1.0.7/racoon_clip/workflow/rules
+RUN sed -i '622,646 s/^# //'  Report.rmd
+RUN sed -i '614i\umitools_out = map(umitools_out, ~mutate(.x, measure=modify_if(measure, .p = is_empty, .f = ~NA_character_)))' Report.rmd
+
+WORKDIR /racoon_clip-1.0.7/ 
