--- a/mageck/e94a4f7/Dockerfile
+++ b/mageck/e94a4f7/Dockerfile
@@ -36,19 +36,27 @@ RUN Rscript -e 'install.packages("BiocManager", repos="http://cloud.r-project.or
 RUN Rscript -e 'BiocManager::install("fgsea")' && Rscript -e 'library(fgsea)'
 RUN Rscript -e 'install.packages("data.table", repos="http://cloud.r-project.org/" )'  && Rscript -e 'library(data.table)'
 RUN Rscript -e 'install.packages("devtools", repos="http://cloud.r-project.org/" )'  && Rscript -e 'library(devtools)'
-# RUN Rscript -e 'devtools::install_version("ggplot2", "3.3.3")' && Rscript -e 'library(ggplot2)'
 RUN Rscript -e 'install.packages("ggplot2", repos="http://cloud.r-project.org/" )' && Rscript -e 'library(ggplot2)'
 RUN Rscript -e 'install.packages("openxlsx", repos="http://cloud.r-project.org/" )' && Rscript -e 'library(openxlsx)'
 
 RUN Rscript -e 'BiocManager::install(c("pathview", "biomaRt", "msigdbr", "dendextend", "pheatmap", "sva", "ggrepel", "knitr", "clusterProfiler", "depmap","BiocStyle"), force=TRUE)'
+RUN Rscript -e 'BiocManager::install("MAGeCKFlute")' && Rscript -e 'library(MAGeCKFlute)'
 
-RUN git clone https://git.bioconductor.org/packages/MAGeCKFlute
+# COPY AJ02_Lib1_Lib2.gene_summary.txt /AJ02_Lib1_Lib2.gene_summary.txt
+# COPY AJ02_Lib1_Lib2.sgrna_summary.txt /AJ02_Lib1_Lib2.sgrna_summary.txt
+# COPY ./.command.sh /.command.sh
 
-RUN Rscript -e 'devtools::build("/MAGeCKFlute")' && \
-  Rscript -e 'devtools::install("/MAGeCKFlute")' && \
-  Rscript -e 'library(MAGeCKFlute)'
+# RUN git clone https://git.bioconductor.org/packages/MAGeCKFlute 
 
-# RUN Rscript -e 'BiocManager::install("MAGeCKFlute")' && Rscript -e 'library(MAGeCKFlute)'
+# RUN cd /MAGeCKFlute && \
+#   git checkout RELEASE_3_12 && \
+#   Rscript -e 'devtools::build("/MAGeCKFlute")' && \
+#   Rscript -e 'devtools::install("/MAGeCKFlute")' && \
+#   Rscript -e 'library(MAGeCKFlute)'
+
+# RUN mkdir /flute_out/
+
+# RUN /.command.sh
 
 # ENTRYPOINT echo "Welcome to MAGeCK Docker" && mageck --version && /bin/bash 
 
