--- a/atacseqqc/1.26.0/Dockerfile
+++ b/atacseqqc/1.26.0/Dockerfile
@@ -43,3 +43,5 @@ RUN Rscript -e 'BiocManager::install("BSgenome.Mmusculus.UCSC.mm10")'
 RUN Rscript -e 'library(BSgenome.Mmusculus.UCSC.mm10)'
 RUN Rscript -e 'BiocManager::install("BSgenome.Scerevisiae.UCSC.sacCer3")'
 RUN Rscript -e 'library(BSgenome.Scerevisiae.UCSC.sacCer3)'
+RUN Rscript -e 'BiocManager::install("BSgenome.Hsapiens.UCSC.hg38")'
+RUN Rscript -e 'library(BSgenome.Hsapiens.UCSC.hg38)'
