--- a/irfinder/1.3.1/Dockerfile
+++ b/irfinder/1.3.1/Dockerfile
@@ -10,7 +10,7 @@ echo "deb http://security.debian.org/debian-security bullseye-security main cont
 echo "deb-src http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list
 
 RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq curl tar git build-essential wget rsync libz-dev && \
+  apt-get install -yq curl pigz bzip2 tar git build-essential wget rsync xxd libz-dev libncurses-dev zlib1g-dev libbz2-dev liblzma-dev bedtools && \
   apt-get clean && rm -rf /var/lib/apt/lists/* 
  
 RUN wget https://github.com/williamritchie/IRFinder/archive/refs/tags/v1.3.1.tar.gz && \
@@ -18,3 +18,16 @@ RUN wget https://github.com/williamritchie/IRFinder/archive/refs/tags/v1.3.1.tar
 
 
 ENV PATH /IRFinder-1.3.1/bin:$PATH
+
+
+RUN wget https://github.com/alexdobin/STAR/archive/2.7.11b.tar.gz && \
+    tar -xzf 2.7.11b.tar.gz && \
+    cd STAR-2.7.11b/source && \
+    make STAR
+
+RUN cp /STAR-2.7.11b/bin/Linux_x86_64_static/STAR /usr/local/bin
+
+RUN wget https://github.com/samtools/samtools/releases/download/1.16.1/samtools-1.16.1.tar.bz2 && \
+  tar -xvf samtools-1.16.1.tar.bz2 && \
+  cd samtools-1.16.1 && \
+  ./configure && make && make install
