--- a/dewseq/1.16.2/Dockerfile
+++ b/dewseq/1.16.2/Dockerfile
@@ -13,6 +13,11 @@ RUN Rscript -e 'install.packages("BiocManager", repos="http://cloud.r-project.or
 RUN Rscript -e 'library(BiocManager)'
 RUN Rscript -e 'BiocManager::install("DEWSeq")'
 RUN Rscript -e 'library(DEWSeq)'
+
+RUN apt-get update && apt-get -yq dist-upgrade && \
+  apt-get install -yqlibharfbuzz-dev libfribidi-dev && \
+  apt-get clean && rm -rf /var/lib/apt/lists/*
+
 RUN Rscript -e 'BiocManager::install("IHW")'
 RUN Rscript -e 'library(IHW)'
 RUN Rscript -e 'install.packages("tidyverse", repos="http://cloud.r-project.org/" )' 
