--- a/dewseq/1.16.2/Dockerfile
+++ b/dewseq/1.16.2/Dockerfile
@@ -14,3 +14,5 @@ RUN Rscript -e 'BiocManager::install("IHW")'
 RUN Rscript -e 'library(IHW)'
 RUN Rscript -e 'install.packages("tidyverse", repos="http://cloud.r-project.org/" )' 
 RUN Rscript -e 'library(tidyverse)'
+RUN Rscript -e 'install.packages("dplyr", repos="http://cloud.r-project.org/" )' 
+RUN Rscript -e 'library(dplyr)'
