--- a/chipseeker/3.18.0/Dockerfile
+++ b/chipseeker/3.18.0/Dockerfile
@@ -35,3 +35,13 @@ RUN Rscript -e 'library(TxDb.Mmusculus.UCSC.mm10.knownGene)'
 RUN Rscript -e 'BiocManager::install("TxDb.Scerevisiae.UCSC.sacCer3.sgdGene")'
 RUN Rscript -e 'library(TxDb.Scerevisiae.UCSC.sacCer3.sgdGene)'
 
+RUN Rscript -e 'BiocManager::install("org.Hs.eg.db")'
+RUN Rscript -e 'library(org.Hs.eg.db)'
+RUN Rscript -e 'BiocManager::install("org.Ce.eg.db")'
+RUN Rscript -e 'library(org.Ce.eg.db)'
+RUN Rscript -e 'BiocManager::install("org.Dm.eg.db")'
+RUN Rscript -e 'library(org.Dm.eg.db)'
+RUN Rscript -e 'BiocManager::install("org.Mm.eg.db")'
+RUN Rscript -e 'library(org.Mm.eg.db)'
+RUN Rscript -e 'BiocManager::install("org.Sc.eg.db")'
+RUN Rscript -e 'library(org.Sc.eg.db)'
