--- a/chipseeker/3.18.0/Dockerfile
+++ b/chipseeker/3.18.0/Dockerfile
@@ -3,7 +3,7 @@ FROM r-base:4.3.2
 LABEL maintainer "bioinformatics@age.mpg.de"
 
 RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq build-essential  libcurl4-openssl-dev libxml2-dev  libgsl-dev libssl-dev libfontconfig1-dev libharfbuzz-dev libfribidi-dev libudunits2-dev && \
+  apt-get install -yq build-essential  libcurl4-openssl-dev libxml2-dev  libgsl-dev libssl-dev libfontconfig1-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev && \
   apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # RUN apt-get update && apt-get -yq dist-upgrade && \
@@ -43,5 +43,3 @@ RUN Rscript -e 'BiocManager::install("org.Dm.eg.db")'
 RUN Rscript -e 'library(org.Dm.eg.db)'
 RUN Rscript -e 'BiocManager::install("org.Mm.eg.db")'
 RUN Rscript -e 'library(org.Mm.eg.db)'
-RUN Rscript -e 'BiocManager::install("org.Sc.eg.db")'
-RUN Rscript -e 'library(org.Sc.eg.db)'
